2005-11-03  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-find.c:
	* embed/ephy-embed-find.h:
	* embed/mozilla/EphyFind.cpp:
	* embed/mozilla/EphyFind.h:
	* embed/mozilla/mozilla-embed-find.cpp:

	More detailed result code from find backend.

	* src/ephy-find-toolbar.c: (set_status), (clear_status),
	(entry_changed_cb), (ephy_find_toolbar_init),
	(ephy_find_toolbar_find_next), (ephy_find_toolbar_find_previous),
	(ephy_find_toolbar_open):

	Add status text to the find toolbar.
	Reverse Next/Previous button order.

2005-11-03  Christian Persch  <chpe@cvs.gnome.org>

	* data/art/Makefile.am:
	R data/art/hand-open.png:
	* lib/egg/egg-toolbar-editor.c: (drag_data_get_cb),
	(set_drag_cursor):

	Use a gtk stock cursor (GDK_HAND2) instead of our own, un-themed one.

2005-11-03  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c: (favicon_drag_begin_cb),
	(ephy_location_entry_construct_contents):

	Simplify the drag icon code.

2005-11-02  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c: (favicon_create_drag_pixmap),
	(favicon_button_press_event_cb), (favicon_button_release_event_cb),
	(favicon_motion_notify_event_cb),
	(ephy_location_entry_construct_contents):

	Show drag icon with page title + URL when dragging from the drag
	handle.

2005-11-02  Christian Persch  <chpe@cvs.gnome.org>

	* data/ui/epiphany-ui.xml:
	* src/ephy-window.c: (update_popup_actions_visibility),
	(show_embed_popup):

	Simplify context menu code by removing the extra
	EphyDocument*FramePopup variants, and just setting the OpenFrame
	action's visibility accordingly; and fix its accelerator.
	Fixes bug #320520.

2005-11-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:
	* embed/mozilla/EphyAboutModule.h:

	Add titles with title capitalisation, and chanage the icon
	on the netOffline error page.

2005-11-02  Christian Persch  <chpe@cvs.gnome.org>
