@@ -1,3 +1,9 @@
+2005-11-04  Christian Persch  <chpe@cvs.gnome.org>
+
+	* lib/ephy-gui.c: (ephy_gui_check_location_writable):
+
+	String cleanup.
+
 2005-11-03  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/ephy-embed-find.c:
